# memU

./: ALGORITHM_OBSERVATION_REPORT.md  COMPLETION_SUMMARY.md  FINAL_CONFIRMATION.py  FINAL_STATUS.md  INTEGRATION_COMPLETE.py  README.md  README_INTEGRATION.md  add_moltbook_knowledge.py  config.py  fix_unicode.py  import_legacy.py  import_legacy_fixed.py  integrate_community_knowledge.py  integrate_vcp_to_clawd.py  learn_from_community.py  manager.py  openclaw_bridge.py  proactive_loop.py  proactive_loop_cleaned.py  proactive_loop_fixed.py  process_community_knowledge.py  pyproject.toml  quick_start.py  quick_start_fixed.py  run_integration.bat  setup_integration.py  setup_integration_simple.py  simulate_community_learning.py  test_bridge.py  test_bridge_connection.py  test_bridge_timeout.py  test_direct_gemini.py  test_gateway_raw.py  test_gemini_openai.py  test_google_sdk.py  test_integration.py  test_integration_fixed.py  test_local_gateway.py  test_memory_retrieval.py  test_new_sdk.py  (+3 more)
.github/workflows/: build.yml  release-please.yml
docs/: ARCHITECTURE_ROADMAP.md  HACKATHON_ISSUE_DRAFT.md  HACKATHON_MAD_COMBOS.md  sealos-devbox-guide.md
examples/: example_5_with_lazyllm_client.py  test_nebius_provider.py
examples/sealos-assistant/: README.md  entrypoint.sh  main.py  requirements.txt
readme/: README_en.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_zh.md
src/memu/app/: memorize.py  retrieve.py  settings.py
src/memu/client/: __init__.py  openai_wrapper.py
src/memu/database/: models.py
src/memu/database/inmemory/: vector.py
src/memu/database/inmemory/repositories/: memory_item_repo.py
src/memu/database/postgres/repositories/: memory_item_repo.py
src/memu/database/repositories/: memory_item.py
src/memu/database/sqlite/: models.py  schema.py
src/memu/database/sqlite/repositories/: memory_item_repo.py
src/memu/prompts/category_summary/: __init__.py  category_with_refs.py
src/memu/utils/: references.py  video.py
tests/: test_client_wrapper.py  test_references.py  test_salience.py
